--- a/src/main.css
+++ b/src/main.css
@@ -1,1 +1,4 @@
-/*# sourceMappingURL=main.css.map */
+body {
+  background-color: #000000;
+  font-size: 23px;
+}/*# sourceMappingURL=main.css.map */
