Added Header elements and SideNav

--- a/src/main.sass
+++ b/src/main.sass
@@ -1,5 +1,6 @@
-@use '_colors'
+@use 'colors'
 
 body
         background-color: colors.$primary-color
         font-size: 23px
+        font-family: colors.$font-default
