--- a/src/_colors.sass
+++ b/src/_colors.sass
@@ -1,1 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap')
+
 $primary-color: #000000
+$font-default:'Comfortaa', cursive
