--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap");
 body {
   background-color: #000000;
   font-size: 23px;
+  font-family: "Comfortaa", cursive;
 }/*# sourceMappingURL=main.css.map */
