--- a/src/style.css
+++ b/src/style.css
@@ -229,7 +229,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("/vectors/abs.jpeg") top center;
   background-size: cover;
 }
 
@@ -252,7 +252,7 @@ h6 {
 
 #hero h1 {
   margin: 0 0 10px 0;
-  font-size: 64px;
+  font-size: 84px;
   font-weight: 700;
   line-height: 56px;
   color: #fff;
@@ -261,7 +261,7 @@ h6 {
 #hero p {
   color: #fff;
   margin-bottom: 50px;
-  font-size: 26px;
+  font-size: 46px;
   font-family: "Poppins", sans-serif;
 }
 
