--- a/src/style.css
+++ b/src/style.css
@@ -229,7 +229,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("/vectors/abs.jpeg") top center;
+  background: url("./vectors/abs.jpeg") top center;
   background-size: cover;
 }
 
