--- a/src/style.css
+++ b/src/style.css
@@ -229,7 +229,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("./vectors/abs.jpeg") top center;
+  background: url("https://images.unsplash.com/photo-1571219809844-438b2fd25536?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80") top center;
   background-size: cover;
 }
 
