--- a/src/main.css
+++ b/src/main.css
@@ -2,4 +2,53 @@
 body {
   font-size: 23px;
   font-family: "Comfortaa", cursive;
+}
+
+.certificates-img {
+  width: 180px;
+  height: 180px;
+  border-radius: 10px;
+  display: flex;
+  gap: 8px;
+}
+
+.certs {
+  display: flex;
+  gap: 5px;
+  flex-wrap: wrap;
+}
+
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
+a {
+  position: relative;
+  display: inline-block;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.image-link {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 5px;
+  transition: opacity 0.5s;
+  font-size: 15px;
+  text-align: center;
+}
+
+a:hover .image-link {
+  opacity: 1;
 }/*# sourceMappingURL=main.css.map */
